[package]
name = "svabresp"
version = "0.1.0"
edition = "2024"

[dependencies]
prism-model = { path = "../prism-model" }
probabilistic-models = { path = "../probabilistic-models" }
probabilistic-model-algorithms = { path = "../probabilistic-model-algorithms" }
probabilistic-properties = { path = "../probabilistic-properties" }
tiny-pmc = { path = "../tiny-pmc" }
prism-model-builder = { path = "../prism-model-builder" }
num-bigint = "0.4.6"
chumsky = "1.0.0-alpha.8"
num-rational = "0.4.2"
num-traits = "0.2.19"
rand = "0.10.0-rc.6"
log = "0.4.29"